<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">实验掌上通</string>
    <!-- Tab动画 -->
    <string name="app_name_tab_failed"></string>
    <string name="layout_activitymain_query">实验首页</string>
    <string name="layout_activitymain_more">个人中心 </string>
    <string name="layout_activitymain_profile">仿真实验</string>
    <string name="layout_activitymain_course">同步视频</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新时间:</string>
    <string name="xlistview_ready">可以松手了，我要加载了...</string>
    <string name="xlistview_footer_hint_normal">点击加载更多</string>
    <string name="xlistview_header_hint_loading">正在加载···</string>
    <string name="url">http://www.shiyan360.cn/Public/Uploads/Video/20160310/56e11849ef696.mp4</string>
    <string name="load_complete">加载完成~</string>
    <string name="player_loading">正在缓冲...</string>
    <string name="player_path_error">视频地址无效~</string>
    <string name="player_network_eror">网络不给力啊~</string>
    <string name="player_complete">播放完成~</string>
    <string name="vitamio_init_decoders">正在初始化播放器...</string>
    <string name="mediacontroller_play_pause">播放/暂停</string>
    <string name="txt_getMsgCode_validate">播放/暂停</string>

    <string name="sorting_latest">按最新</string>
    <string name="grade">全部年级</string>
    <string name="category">全部分类</string>
    <string name="ckcategory">创客分类</string>
    <string name="bkcategory">考试分类</string>
    <string name="wkcategory">文库分类</string>
    <string name="pxcategory">试卷分类</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">实验首页</string>
    <string name="message">同步视频</string>
    <string name="me">仿真实验</string>
    <string name="search">全部分类</string>
    <string name="more"> 个人设置</string>
    <string name="phy_find">视频</string>
    <string name="che_find">专辑</string>
    <string name="statement">广东广视通科教设备有限公司 版权所有</string>
    <string name="copyright">Copyright © 2016-2018 广视通</string>


</resources>